# SeeRT-Overlay

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: App.cpp  App.h  main.cpp  resources.rc
src/audio/: AudioLoopback.cpp  AudioLoopback.h
src/capture/: WGCCapture.cpp  WGCCapture.h
src/render/: D3DRenderer.cpp  D3DRenderer.h
src/render/shaders/: crt.hlsl
src/settings/: Presets.cpp  Presets.h  Settings.cpp  Settings.h
src/ui/: MonitorPicker.cpp  MonitorPicker.h  SettingsPanel.cpp  SettingsPanel.h  StyleFonts.h  TrayIcon.cpp  TrayIcon.h  WindowPicker.cpp  WindowPicker.h
tools/: WhoHasMyClick.ps1
